--- a/Areas/Tenant/Views/Tenant/Index.cshtml
+++ b/Areas/Tenant/Views/Tenant/Index.cshtml
@@ -1,61 +1,59 @@
 ﻿<div class="container-fluid">
-    <div class="col-12 mb-30">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card text-center">
-                    <div class="card-body card-modifed">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap">
-                            <div class="status-info mb-2">
-                                <select id="room-status" class="form-select input-height"
-                                    aria-label="Chọn trạng thái phòng">
-                                    <option value="all">Room status</option>
-                                    <option value="available">Available </option>
-                                    <option value="abouttoexpire">About to expire</option>
-                                    <option value="rented">Rented</option>
-                                </select>
-                                <!-- Room Number Field -->
-                                <input class="input-height input-room" type="text" id="room-number"
-                                    placeholder="Enter number room" aria-label="Nhập số phòng">
-                                <!-- Search Button -->
-                                <a href="#" class="btn btn-primary btn-custom me-2">
-                                    <i class="fas fa-search"></i>
-                                    Search
-                                </a>
-                            </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateHome" class="btn btn-primary me-2">
-                                    <i class="fas fa-plus"></i>
-                                    Add home
-                                </a>
-                                @* <a href="#" class="btn btn-info me-2">
-                                <i class="fas fa-edit"></i>
-                                Enter room from excel
-                                </a> *@
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    @* <div class="col-12 mb-30">
+    <div class="row">
+    <div class="col-lg-12">
+    <div class="card text-center">
+    <div class="card-body card-modifed">
+    <div class="d-flex justify-content-between align-items-center flex-wrap">
+    <div class="status-info mb-2">
+    <select id="room-status" class="form-select input-height"
+    aria-label="Chọn trạng thái phòng">
+    <option value="all">Room status</option>
+    <option value="available">Available </option>
+    <option value="abouttoexpire">About to expire</option>
+    <option value="rented">Rented</option>
+    </select>
+    <!-- Room Number Field -->
+    <input class="input-height input-room" type="text" id="room-number"
+    placeholder="Enter number room" aria-label="Nhập số phòng">
+    <!-- Search Button -->
+    <a href="#" class="btn btn-primary btn-custom me-2">
+    <i class="fas fa-search"></i>
+    Search
+    </a>
     </div>
+    <div class="action-buttons mb-2">
+    <a asp-area="Tenant" asp-controller="Tenant" asp-action="CreateTenant"
+    class="btn btn-primary me-2">
+    <i class="fas fa-plus"></i>
+    Add home
+    </a>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div> *@
     <div class="col-12 mb-30">
         <div class="row">
             <div class="col-lg-12">
                 <div class="card ">
                     <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
+                        <ul class="nav nav-tabs card-header-tabs" id="tab-list">
+
+                            @* <li class="nav-item">
+                            <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">87 - Hoàng Diệu</a>
+                            <a class="nav-link" href="#">87 - Hoàng Diệu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">139 - Trường Trinh</a>
+                            <a class="nav-link" href="#">139 - Trường Trinh</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
-                            </li>
+                            <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
+                            </li> *@
                         </ul>
                     </div>
                     <div class="card-body">
@@ -70,9 +68,6 @@
                                 <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
                                     <i class="fas fa-edit"></i> Update home
                                 </a>
-                                @* <a href="#" class="btn btn-danger ">
-                                <i class="fas fa-trash"></i> Delete home
-                                </a> *@
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered zero-configuration" <thead>
