--- a/Areas/AssetAndEquipment/Views/AssetAndEquipment/Index.cshtml
+++ b/Areas/AssetAndEquipment/Views/AssetAndEquipment/Index.cshtml
@@ -43,39 +43,38 @@
             <div class="col-lg-12">
                 <div class="card ">
                     <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
+                        <ul class="nav nav-tabs card-header-tabs" id="tab-list">
+
+                            @* <li class="nav-item">
+                            <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">87 - Hoàng Diệu</a>
+                            <a class="nav-link" href="#">87 - Hoàng Diệu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">139 - Trường Trinh</a>
+                            <a class="nav-link" href="#">139 - Trường Trinh</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
-                            </li>
+                            <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
+                            </li> *@
                         </ul>
                     </div>
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                            <div class="status-info mb-2">
-                                <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span>
+                            <div class="status-info mb-2" id="status-info">
+                                @* <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span> *@
                             </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
-                                    <i class="fas fa-plus"></i> Add room
+                            <div class="action-buttons mb-2" id="btn-action">
+                                @* <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
+                                <i class="fas fa-plus"></i> Add Tenant
                                 </a>
                                 <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
-                                    <i class="fas fa-edit"></i> Update home
-                                </a>
-                                @* <a href="#" class="btn btn-danger ">
-                                <i class="fas fa-trash"></i> Delete home
+                                <i class="fas fa-edit"></i> Export list
                                 </a> *@
                             </div>
                             <div class="table-responsive">
-                                <table class="table table-striped table-bordered zero-configuration" <thead>
+                                <table class="table table-striped table-bordered zero-configuration text-center"
+                                    id="assest-equipment-list">
                                     <thead>
                                         <tr>
                                             <th>Asset ID</th>
@@ -118,9 +117,28 @@
                                 </table>
                             </div>
                         </div>
-                        <hr />
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="basicModal">
+    <div class="modal-dialog" role="documen t">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal">
+                    <span>&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Modal body text goes here.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
     </div>
@@ -128,15 +146,23 @@
 
 @* Link CSS*@
 @section AdditionalLinkCSS {
+
     <link href="../css/site.css" rel="stylesheet">
     <link href="../plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <style>
+        #user-list_wrapper {
+            padding: 0px !important;
+        }
+    </style>
 }
 
 @* Link Javascript*@
 @section AdditionalLinkJavascript {
-    <script src="../js/room/room.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../plugins/tables/js/jquery.dataTables.min.js"></script>
     <script src="../plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
     <script src="../plugins/tables/js/datatable-init/datatable-basic.min.js"></script>
+    <script src="~/js/asset-and-equipment/asset-and-equipment.js"></script>
+
 }
