--- a/Areas/Tenant/Views/Tenant/Index.cshtml
+++ b/Areas/Tenant/Views/Tenant/Index.cshtml
@@ -60,32 +60,30 @@
                         </ul>
                     </div>
                     <div class="card-body">
-                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3" id="btn-action">
-                            @* <div class="status-info mb-2">
-                            <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span>
+                        <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
+                            <div class="status-info mb-2" id="status-info">
+                                @* <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span> *@
                             </div>
-                            <div class="action-buttons mb-2">
-                            <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
-                            <i class="fas fa-plus"></i> Add Tenant
-                            </a>
-                            <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
-                            <i class="fas fa-edit"></i> Export list
-                            </a>
+                            <div class="action-buttons mb-2" id="btn-action">
+                                @* <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
+                                <i class="fas fa-plus"></i> Add Tenant
+                                </a>
+                                <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
+                                <i class="fas fa-edit"></i> Export list
+                                </a> *@
                             </div>
-                            </hr> *@
                             <div class="table-responsive">
-                                <table class="table table-striped table-bordered zero-configuration" id="user-list">
+                                <table class="table table-striped table-bordered zero-configuration text-center"
+                                    id="user-list">
                                     <thead>
                                         <tr>
-                                            <th>Tenant ID</th>
-                                            <th>Full Name</th>
-                                            <th>Gender</th>
-                                            <th>Date of Birth</th>
-                                            <th>ID Card Number</th>
-                                            <th>Phone Number</th>
-                                            <th>Email</th>
-                                            <th>Address</th>
-                                            <th>Actions</th>
+                                            <th style="width: 1%;">No.</th>
+                                            <th style="width: 15%;">Full Name</th>
+                                            <th style="width: 10%;">Gender</th>
+                                            <th style="width: 10%;">Date of Birth</th>
+                                            <th style="width: 10%;">ID Card Number</th>
+                                            <th style="width: 44%;">Address</th>
+                                            <th style="width: 10%;">Actions</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -123,9 +121,14 @@
 
 @* Link CSS*@
 @section AdditionalLinkCSS {
+
     <link href="../css/site.css" rel="stylesheet">
     <link href="../plugins/tables/css/datatable/dataTables.bootstrap4.min.css" rel="stylesheet">
-
+    <style>
+        #user-list_wrapper {
+            padding: 0px !important;
+        }
+    </style>
 }
 
 @* Link Javascript*@
