--- a/Areas/Contract/Views/Contract/Index.cshtml
+++ b/Areas/Contract/Views/Contract/Index.cshtml
@@ -43,36 +43,18 @@
             <div class="col-lg-12">
                 <div class="card ">
                     <div class="card-header">
-                        <ul class="nav nav-tabs card-header-tabs">
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">83 - Lê Văn Lương</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">87 - Hoàng Diệu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">139 - Trường Trinh</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">231 - Nguyễn Thị Thập</a>
-                            </li>
+                        <ul class="nav nav-tabs card-header-tabs" id="tab-list">
+                            @* Generate code *@
                         </ul>
                     </div>
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center flex-wrap mb-3">
-                            <div class="status-info mb-2">
-                                <span>Available 4</span> | <span>About to expire 2</span> | <span>Rented 7</span>
+                            <div class="status-info mb-2" id="status-info">
+                                @* Generate code *@
                             </div>
-                            <div class="action-buttons mb-2">
-                                <a asp-controller="Room" asp-action="CreateRoom" class="btn btn-primary me-2 ">
-                                    <i class="fas fa-plus"></i> Add room
-                                </a>
-                                <a asp-controller="Room" asp-action="EditHome" class="btn btn-info me-2 ">
-                                    <i class="fas fa-edit"></i> Update home
-                                </a>
-                                @* <a href="#" class="btn btn-danger ">
-                                <i class="fas fa-trash"></i> Delete home
-                                </a> *@
+                            <div class="action-buttons mb-2" id="btn-action">
+                                @* Generate code *@
+
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered zero-configuration" <thead>
@@ -149,7 +131,7 @@
 
 @* Link Javascript*@
 @section AdditionalLinkJavascript {
-    <script src="../js/room/room.js"></script>
+    <script src="../js/contract/contract.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../plugins/tables/js/jquery.dataTables.min.js"></script>
     <script src="../plugins/tables/js/datatable/dataTables.bootstrap4.min.js"></script>
