feat: View invoice

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -267,7 +267,7 @@
                         </a>
                     </li>
                     <li>
-                        <a asp-area="InvoiceAndPayment" asp-action="Index" asp-controller="Payment">
+                        <a asp-area="InvoiceAndPayment" asp-action="Index" asp-controller="Invoice">
                             <i class="icon-credit-card menu-icon"></i><span class="nav-text">Payment</span>
                         </a>
                     </li>
