--- a/Areas/InvoiceAndPayment/Views/Invoice/Index.cshtml
+++ b/Areas/InvoiceAndPayment/Views/Invoice/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="container-fluid">
+<div class="container-fluid">
     <div class="col-12 mb-30">
         <div class="row">
             <div class="col-lg-12">
@@ -57,62 +57,21 @@
 
                             </div>
                             <div class="table-responsive">
-                                @* <table class="table table-striped table-bordered zero-configuration" <thead>
-                                <thead>
-                                <tr>
-                                <th>Contract ID</th>
-                                <th>Customer Name</th>
-                                <th>Sign Date</th>
-                                <th>Expiration Date</th>
-                                <th>Value (VND)</th>
-                                <th>Status</th>
-                                <th>Actions</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                <td>CT001</td>
-                                <td>John Doe</td>
-                                <td>01/01/2023</td>
-                                <td>01/01/2024</td>
-                                <td>100,000,000</td>
-                                <td>Active</td>
-                                <td>
-                                <span>
-                                <a asp-controller="Tenant" asp-action="EditTenant" asp-route-id="1"
-                                data-toggle="tooltip" data-placement="top" title="Edit">
-                                <i class="fa fa-pencil color-muted m-r-5"></i>
-                                </a>
-                                <!-- Link trigger modal for closing -->
-                                <a href="#basicModal" data-toggle="modal" title="Close">
-                                <i class="fa fa-close color-danger"></i>
-                                </a>
-                                </span>
-                                </td>
-                                </tr>
-                                <tr>
-                                <td>CT002</td>
-                                <td>Jane Smith</td>
-                                <td>15/02/2023</td>
-                                <td>15/02/2024</td>
-                                <td>200,000,000</td>
-                                <td>Paid</td>
-                                <td>
-                                <span>
-                                <a asp-controller="Tenant" asp-action="EditTenant" asp-route-id="2"
-                                data-toggle="tooltip" data-placement="top" title="Edit">
-                                <i class="fa fa-pencil color-muted m-r-5"></i>
-                                </a>
-                                <!-- Link trigger modal for closing -->
-                                <a href="#basicModal" data-toggle="modal" title="Close">
-                                <i class="fa fa-close color-danger"></i>
-                                </a>
-                                </span>
-                                </td>
-                                </tr>
-                                <!-- Add more rows as needed -->
-                                </tbody>
-                                </table> *@
+                                <table class="table table-striped table-bordered zero-configuration" id=invoice-list>
+                                    <thead>
+                                        <tr>
+                                            <th>No.</th>
+                                            <th>Room Number</th>
+                                            <th>Month Payment</th>
+                                            <th>Total Price</th>
+                                            <th>Status</th>
+                                            <th>Actions</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @* Generate code *@
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                         <hr />
